--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -7,3 +7,5 @@ $welcome-border:#BC2D2B;
 $footer-top:#5A8DEE;
 $footer-bottom:#0b2d6d;
 $footer-title:#dae711;
+$subpage-titlebg:#e9e9e9;
+$subpage-titletextcolor:#000;
