--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -1,5 +1,8 @@
-$logotextcolor:#0208f6;
-$logotextfirstlettercolor:#fc0303;
+//$logotextcolor:#0208f6;
+//$logotextfirstlettercolor:#fc0303;
+$topheaderbg:#001949;
+$logotextcolor:#cbb500;
+$logotextfirstlettercolor:#009f3c;
 $color-menu:#5A8DEE;
 $color-menuhover:#174cb0;
 $welcome-title:#0b037e;
