--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,5 +1,50 @@
 /* Start Header */
 header {
+    .top-header{
+        background-color: $topheaderbg;
+        padding: 0.5rem 0;
+        h5{
+            margin-bottom: 0;
+            font-size: 1rem;
+            color: #fff;
+            span{                
+                margin-right: 1rem;
+            }
+            i{
+                margin-right: 0.5rem;
+            }
+            a{
+                color: #9ec1e8;
+            }
+        }
+        ul{
+            display: flex;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            justify-content: flex-end;
+            align-items: center;
+            li{
+                color: #fff;
+                &:first-child{
+                    margin-right: 0.5rem;
+                }
+                &:last-child{
+                    margin-left: 0.5rem;
+                }
+                a{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                    background-color: #c1fcff;
+                    margin-right: 0.5rem;
+                }
+            }
+        }
+    }
     padding: 5px 0;
     .site-logo {
         display: flex;
@@ -32,7 +77,7 @@ header {
             li {
                 display: flex;
                 align-items: center;
-                margin-left: 1rem;
+                margin-left: 0.8rem;
                 .header-icon {
                     width: 32px;
                     height: 32px;
@@ -67,3 +112,130 @@ header {
     }
 }
 /* End Header */
+
+/* Start Responsive */
+@media (min-width:320px) and (max-width:575px){
+    header{
+        .top-header{
+            h5{
+                font-size: 0.9rem;
+            }
+            ul{
+                margin-top: 0.5rem;
+                li{
+                    font-size: 1rem;
+                    a{
+                        width: 24px;
+                        height: 24px
+                    }
+                }
+            }
+        }
+        .site-logo{
+            img{
+                max-height: 65px;
+            }
+            h4{
+                margin-left: 1rem;
+                margin-bottom: 0;
+            }
+        }
+        .header-list{
+            ul{
+                li{
+                    .header-icon{
+                        width: 24px;
+                        height: 24px;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width:576px) and (max-width:767px){
+    header{
+        .top-header{
+            ul{
+                justify-content: flex-start;
+                margin-top: 0.5rem;
+            }
+        }
+        .site-logo{
+            justify-content: center;
+            img{
+                max-height: 65px;
+            }
+            h4{
+                margin-left: 1rem;
+                margin-bottom: 0;
+            }
+        }
+        .header-list{
+            ul{
+                li{
+                    margin-left: 0.4rem;
+                    .header-icon{
+                        width: 23px;
+                        height: 23px;
+                        i{
+                            font-size: 1rem;
+                        }
+                    }
+                    h5{
+                        font-size: 1rem;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width:768px) and (max-width:991px){
+    header{
+        .top-header{
+            ul{
+               li{
+                   a{
+                    width: 28px;
+                    height: 28px;
+                    margin-right: 0.3rem;
+                   }
+                
+               }
+            }
+        }
+        .site-logo{
+            justify-content: center;
+            img{
+                max-height: 65px;
+            }
+            h4{
+                margin-left: 0;
+            }
+        }
+    }
+    .mobile-nav-toggle i {
+        margin: 16px 2px 0 0 !important;
+    }
+}
+@media (min-width:992px) and (max-width:1199px){
+    header{
+        .site-logo{
+            img{
+                max-height: 65px;
+            }
+        }
+        .header-list{
+            li{
+                margin-left: 0.2rem !important;
+                .header-icon{
+                    width: 28px;
+                    height: 28px;
+                }
+                h5{
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+}
+/* End Responsive */
