--- a/assets/sass/_sections.scss
+++ b/assets/sass/_sections.scss
@@ -21,3 +21,11 @@
         letter-spacing: 0.5px;
     }
 }
+@media (min-width:320px) and (max-width:575px){
+    .welcome-secion {
+        padding: 2rem 1rem;
+        h2{
+            font-size: 1.8rem;
+        }
+    }
+}
