--- a/assets/sass/ghs.theme.scss
+++ b/assets/sass/ghs.theme.scss
@@ -1,5 +1,5 @@
 /**
-* Template Name: Catholic Soft - v1.0.0
+* Template Name: Vision Drivers - v1.0.0
 * Author: Vijay
 */
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
