--- a/assets/sass/_subpage.scss
+++ b/assets/sass/_subpage.scss
@@ -1,40 +1,60 @@
 /* ========================= Start Sub page styles ============================== */
-.page-header-title
-{
+.page-header-title {
     background-color: $subpage-titlebg;
     color: $subpage-titletextcolor;
-    h2{
+    h2 {
         font-size: 1.4rem;
         margin: 0;
         padding: 10px 0;
         font-weight: bold;
     }
 }
-.page-content
-{
+.page-content {
     min-height: 33vh;
     padding: 2rem 15px;
-    h4{
+    h4 {
         font-size: 1.2rem;
         font-weight: 600;
         color: #1a0c91;
         margin-bottom: 1rem;
     }
-    p{
+    p {
         font-size: 0.9rem;
         line-height: 26px;
         letter-spacing: 0.5px;
     }
-    .contact-list
-    {
+    .contact-list {
         list-style: none;
         padding: 0;
         margin: 0;
         list-style: none;
-        li{
+        li {
             line-height: 32px;
-            i{
+            i {
                 margin-right: 15px;
+            }
+        }
+    }
+    .service-sections {
+        background-color: #fafafa;
+        padding: 1rem;
+        border: 1px solid #ececec;
+        box-shadow: 0 0 1px RGB(0 0 0/18%), 0 2px 4px RGB(0 0 0/12%);
+        margin-bottom: 1rem;
+        .services-thumbnail {
+            padding: 0.25rem;
+            background-color: #fff;
+            border: 1px solid #dee2e6;
+            border-radius: 0.25rem;
+            max-width: 100%;
+            height: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 1rem;
+            img {
+                max-width: 100%;
+                max-height: 100%;
             }
         }
     }
