--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -253,6 +253,6 @@
 /* Start Responsive */
 @media (min-width:320px) and (max-width:575px){
     .menu-bg{
-        display: none;
+        //display: none;
     }
 }
